<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:text="@string/time"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="бтпит бтпит бтпит бтпит бтпит бтпит бтпит  бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит бтпит https://btpit36.ru/ "
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />

        <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageView, textView, textView2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16px"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppTheme.IconButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:icon="@drawable/ic_launcher_foreground"
        tools:checked="@sample/posts.json/data/likes"
        tools:text="@sample/posts.json/data/likes"
        style="@style/Widget.AppTheme.LikeButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/description_post_share"
        tools:checked="@sample/posts.json/data/likes"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:icon="@drawable/baseline_link_24"
        style="@style/Widget.AppTheme.IconButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
